incorrect_gateUrl/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: oes-argo-rollout-demo
spec:
  selector:
    app: oes-argo-rollout-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
